@@ -103,6 +103,9 @@ Changes from Ant 1.6.2 to current Ant 1.6 CVS version
 Changes that could break older environments:
 --------------------------------------------
 
+* The subant task used the canonical version of a file path. This
+  has been changed to use the absolute path. Bugzilla 30438.
+
 Other changes:
 --------------
 
